# mat-rs

./: Cargo.toml  readme.md
src/: dmat.rs  lib.rs  main.rs  mat.rs
